; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserSystemParametersInfo.c_Test_MetricKey.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserSystemParametersInfo.c_Test_MetricKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_METRIC = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [10 x i8] c"Value=%S\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i32] [i32 49, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_MetricKey(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [10 x i32], align 16
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 40, i32* %6, align 4
  %7 = load i32, i32* @KEY_METRIC, align 4
  %8 = load i32, i32* %3, align 4
  %9 = bitcast [10 x i32]* %5 to i32**
  %10 = call i64 @QueryUserRegValueW(i32 %7, i32 %8, i32** %9, i32* %6, i32* null)
  %11 = load i64, i64* @ERROR_SUCCESS, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = getelementptr inbounds [10 x i32], [10 x i32]* %5, i64 0, i64 0
  %17 = call i64 @_wcsicmp(i32* %16, i8* bitcast ([2 x i32]* @.str.1 to i8*))
  %18 = icmp eq i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %20)
  ret void
}

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i64 @QueryUserRegValueW(i32, i32, i32**, i32*, i32*) #1

declare dso_local i64 @_wcsicmp(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
